intel/bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_alias_opcode_with_main/log.txt
bench_214_new/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_alias_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_alias_opcode_with_main.c:194:21: error: use of undeclared identifier 'NULL'
    default: return NULL;
                    ^
1 error generated.
HLS FPGA Parse FAILED.
